name:           hjass
version:        0.1.0.0
synopsis:       Compiler for JASS language
homepage:       https://github.com/ncrashed/hjass
license:        MIT
license-file:   LICENSE
author:         NCrashed <ncrashed@gmail.com>
maintainer:     ncrashed@gmail.com
copyright:      Anton Gushcha © 2013,2015
category:       Language
build-type:     Simple
cabal-version:  >=1.8
data-files:     
                tests/blizzard.j,
                tests/common.j

library 
  build-depends:     
                   base >= 4,
                   peggy >=0.3 && <0.4,
                   digits >=0.2 && <0.3
  ghc-options:       -Wall
  default-language:  Haskell2010
  hs-source-dirs:    src/library
  exposed-modules:   Language.Jass.Parser.Grammar

test-suite syntax-tests
  type:            exitcode-stdio-1.0
  main-is:         syntax-tests.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                  base >= 4,
                  peggy >=0.3 && <0.4,
                  digits >=0.2 && <0.3,
                  tasty > 0.10,
                  tasty-hunit,
                  HUnit,
                  tasty-quickcheck,
                  QuickCheck
  default-language:  Haskell2010                
  other-modules:   
                  Language.Jass.Parser.AST,
                  Language.Jass.Parser.ASTTest,
                  Language.Jass.Parser.Grammar,
                  Language.Jass.Parser.GrammarTest
  hs-source-dirs:  
                  src/library,
                  test-suites

