name:           hjass
version:        0.1.0.0
synopsis:       Compiler for JASS language
homepage:       https://github.com/ncrashed/hjass
license:        MIT
license-file:   LICENSE
author:         NCrashed <ncrashed@gmail.com>
maintainer:     ncrashed@gmail.com
copyright:      Anton Gushcha © 2013,2015
category:       Language
build-type:     Simple
cabal-version:  >=1.10
data-files:     
                tests/blizzard.j,
                tests/common.j

library 
  build-depends:     
                   base >= 4,
                   parsec >= 3.1,
                   digits >=0.2 && <0.3,
                   hashtables >=1.0 && <1.3,
                   mtl >=2.0 && <2.2,
                   transformers >= 0.3,
                   transformers-compat >= 0.3,
                   unordered-containers >=0.2 && <0.3,
                   llvm-general == 3.4.4.3,
                   llvm-general-pure == 3.4.4.1,
                   safe >=0.3 && <0.4,
                   containers >= 0.4.2.1,
                   directory,
                   filepath >=1.3 && <1.4
  ghc-options:       -Wall
  default-language:  Haskell2010
  hs-source-dirs:    src/library
  exposed-modules:   Language.Jass.Parser.Grammar
  other-modules:   
                   Language.Jass.Parser.AST.FunctionDecl,
                   Language.Jass.Parser.AST.LocalVar,
                   Language.Jass.Parser.AST.Expression,
                   Language.Jass.Parser.AST.Statement

test-suite all-tests
  type:            exitcode-stdio-1.0
  main-is:         all-tests.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                  base >= 4,
                  parsec >= 3.1,
                  digits >=0.2 && <0.3,
                  hashtables >=1.0 && <1.3,
                  transformers >= 0.3,
                  transformers-compat >= 0.3,
                  mtl >=2.0 && <2.3,
                  unordered-containers >=0.2 && <0.3,
                  llvm-general == 3.4.4.3,
                  llvm-general-pure == 3.4.4.1,
                  safe >=0.3 && <0.4,
                  containers >= 0.4.2.1,
                  tasty > 0.10,
                  tasty-hunit,
                  HUnit,
                  tasty-quickcheck,
                  QuickCheck,
                  directory,
                  filepath >=1.3 && <1.4
                  
  default-language:  Haskell2010                
  other-modules:   
                  Language.Jass.Codegen.Context,
                  Language.Jass.Codegen.Generator,
                  Language.Jass.Codegen.GeneratorTest,
                  Language.Jass.JassType,
                  Language.Jass.Parser.AST,
                  Language.Jass.Parser.AST.Expression,
                  Language.Jass.Parser.AST.Function,
                  Language.Jass.Parser.AST.FunctionDecl,
                  Language.Jass.Parser.AST.GlobalVar,
                  Language.Jass.Parser.AST.JassModule,
                  Language.Jass.Parser.AST.LocalVar,
                  Language.Jass.Parser.AST.NativeDecl,
                  Language.Jass.Parser.AST.Parameter,
                  Language.Jass.Parser.AST.Statement,
                  Language.Jass.Parser.AST.TypeDef,
                  Language.Jass.Parser.ASTTest,
                  Language.Jass.Parser.Grammar,
                  Language.Jass.Parser.GrammarTest,
                  Language.Jass.Semantic.Callable,
                  Language.Jass.Semantic.Check,
                  Language.Jass.Semantic.CheckTest,
                  Language.Jass.Semantic.Context,
                  Language.Jass.Semantic.SemanticError,
                  Language.Jass.Semantic.Type,
                  Language.Jass.Semantic.Variable,
                  Language.Jass.ShowIndent
  hs-source-dirs:  
                  src/library,
                  test-suites

